--- a/src/assets/styles/cmps/_TaskPreview.scss
+++ b/src/assets/styles/cmps/_TaskPreview.scss
@@ -26,6 +26,15 @@
       > div {
         display: flex;
         margin-right: 1em;
+        align-items: center;
+        justify-content: center;
+
+        .checklist-counter {
+          margin-top: 0.09rem;
+        }
+        .date-counter {
+          margin-top: 0.09rem;
+        }
       }
       .icon.member {
         margin-left: auto;
@@ -37,9 +46,10 @@
           margin-right: auto;
         }
         & + span {
+          font-size: rem(12px);
           vertical-align: middle;
-          font-size: 0.7rem;
           margin-left: 0.3em;
+          color: $text-subtle;
         }
       }
 
@@ -52,12 +62,14 @@
           color: $dynamic-text;
         }
 
-        .checklist-counter {
+        > .checklist-counter {
           color: $dynamic-text;
         }
       }
 
       .due-date {
+        align-self: center;
+
         &.overdue-long {
           background-color: $background-danger;
           border-radius: 3px;
@@ -69,6 +81,7 @@
 
           .date-counter {
             color: $ds-text-danger;
+            margin-top: 0.021rem;
           }
 
           &:hover {
@@ -108,11 +121,12 @@
           padding: 2px 4px 2px 4px;
 
           .icon.date {
-            color: $ds-text-warning-inverse
+            color: $ds-text-warning-inverse;
           }
 
           .date-counter {
             color: $ds-text-warning-inverse;
+            margin-top: 0.021rem;
           }
           &:hover {
             background-color: $ds-background-warning-bold-hovered;
@@ -122,7 +136,7 @@
           }
         }
 
-        &.done{
+        &.done {
           background-color: $background-success-bold;
           &:hover {
             background-color: $background-success-bold-hovered;
