--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -23,8 +23,10 @@ $group-background-input: #FFFFFF;
 $background-Add-btn: #0C66E4;
 $dynamic-text: #FFFFFF;
 $icon-subtle: #626F86;
+$text-subtle: #44546F;
 $dynamic-button: transparent;
 $dynamic-button-hovered: #A6C5E229;
+$add-btn-bold-hovered: #0055CC;
 $dynamic-button-pressed: #BFDBF847;
 $dynamic-button-highlighted: #DFE1E6;
 $dynamic-button-highlighted-text: #172B4D;
